@@ -1,6 +1,6 @@
 /*
  * OKTW Galaxy Project
- * Copyright (C) 2018-2021
+ * Copyright (C) 2018-2022
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as published
@@ -27,7 +27,6 @@ import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Redirect;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Mixin(PlayerManager.class)
 public class MixinCustomRecipe_PlayerManager {
@@ -36,14 +35,14 @@ public class MixinCustomRecipe_PlayerManager {
     @Redirect(method = "onPlayerConnect", at = @At(value = "INVOKE", target = "Lnet/minecraft/recipe/RecipeManager;values()Ljava/util/Collection;"))
     private Collection<Recipe<?>> skipSendRecipe(RecipeManager recipeManager) {
         Collection<Recipe<?>> recipes = recipeManager.values();
-        recipes.removeAll(CustomRecipeManager.customRecipes.values().stream().flatMap(i -> i.values().stream()).collect(Collectors.toList()));
+        recipes.removeAll(CustomRecipeManager.customRecipes.values().stream().flatMap(i -> i.values().stream()).toList());
         return recipes;
     }
 
     @Redirect(method = "onDataPacksReloaded", at = @At(value = "INVOKE", target = "Lnet/minecraft/recipe/RecipeManager;values()Ljava/util/Collection;"))
     private Collection<Recipe<?>> skipSyncRecipe(RecipeManager recipeManager) {
         Collection<Recipe<?>> recipes = recipeManager.values();
-        recipes.removeAll(CustomRecipeManager.customRecipes.values().stream().flatMap(i -> i.values().stream()).collect(Collectors.toList()));
+        recipes.removeAll(CustomRecipeManager.customRecipes.values().stream().flatMap(i -> i.values().stream()).toList());
         return recipes;
     }
 }
